--- a/src/sys-user/home-page/userhome.scss
+++ b/src/sys-user/home-page/userhome.scss
@@ -153,8 +153,7 @@ main {
                     img {
                         margin: 10px 0;
                         border: 5px solid $header-color;
-                        border-radius: 50%;
-                        box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+                        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
                     }
                 }
                 
