--- a/src/sys-user/message-page/userMessage.css
+++ b/src/sys-user/message-page/userMessage.css
@@ -239,4 +239,76 @@ main .container .progress-cont .progress .progress-bar-cont {
   align-items: center;
   flex-direction: column;
   cursor: pointer;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas {
+  height: 65vh;
+  width: 360px;
+  margin-top: 10px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+  flex-direction: column;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont .p-s, main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont .d-t {
+  display: flex;
+  align-items: center;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont .p-s p, main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont .d-t p {
+  font-size: 0.8rem;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont .p-s .title, main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont .d-t .title {
+  font-weight: 600;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .order {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+  flex-direction: column;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .order p {
+  font-size: 0.8rem;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .order .spe-order {
+  display: flex;
+  width: 340px;
+  height: 50px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .order .spe-order img {
+  margin-left: 5px;
+  margin-right: 5px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .progress-timeline {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+  flex-direction: column;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .progress-timeline p {
+  font-size: 0.8rem;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .progress-timeline .percentage {
+  width: 340px;
+  height: 30px;
+  margin-top: 10px;
+  border-left: 5px solid #a8896c;
+  display: flex;
+  align-items: center;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .progress-timeline .percentage .prog-status {
+  width: 85px;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .progress-timeline .percentage .prog-status p {
+  margin-left: 5px;
+  color: #FF0000;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .progress-timeline .percentage .percent {
+  width: 60px;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .progress-timeline .percentage .prog-desc {
+  width: 195px;
 }/*# sourceMappingURL=userMessage.css.map */
