--- a/src/style/header/_header.scss
+++ b/src/style/header/_header.scss
@@ -16,7 +16,7 @@ header {
     @include flexBox();
 
     background-color: $header-color;
-    height: 8vh;
+    height: 75px;
     width: 100%;
     position: sticky;
     top: 0;
