--- a/src/sys-user/message-page/userMessage.css
+++ b/src/sys-user/message-page/userMessage.css
@@ -3,6 +3,77 @@
 /*login container color*/
 /*white color*/
 /*mountain background color*/
+.alert {
+  width: 100%;
+  height: 100vh;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99999;
+  background-color: rgba(0, 0, 0, 0.575);
+}
+.alert .alert-cont {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.alert .alert-cont .alert-content {
+  width: 400px;
+  height: 300px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+.alert .alert-cont .alert-content img {
+  margin-top: 20px;
+}
+.alert .alert-cont .alert-content h1 {
+  text-align: center;
+  margin-top: 20px;
+}
+.alert .alert-cont .alert-content p {
+  text-align: center;
+  margin: 10px 20px 10px 10px;
+}
+.alert .alert-cont .alert-content .alert-btn .btn-secondary {
+  background: #c1c1c1;
+}
+.alert .alert-cont .alert-content .alert-btn .btn-secondary:hover {
+  opacity: 75%;
+}
+.alert .alert-cont .alert-content .alert-btn .btn-danger {
+  background: #ee3535;
+}
+.alert .alert-cont .alert-content .alert-btn .btn-danger:hover {
+  opacity: 75%;
+}
+.alert .alert-cont .alert-content .alert-btn .btn-green {
+  background-color: #3bb54a;
+}
+.alert .alert-cont .alert-content .alert-btn .btn-green:hover {
+  opacity: 75%;
+}
+.alert .alert-cont .alert-content .alert-btn button {
+  cursor: pointer;
+  color: #fff;
+  border-radius: 4px;
+  background: #60c7c1;
+  text-decoration: none;
+  transition: all 0.4s;
+  line-height: normal;
+  min-width: 120px;
+  border: none;
+  min-height: 40px;
+  border-radius: 3px;
+  margin: 0 5px;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -17,7 +88,7 @@ header {
   display: flex;
   align-items: center;
   background-color: #a8896c;
-  height: 8vh;
+  height: 75px;
   width: 100%;
   position: -webkit-sticky;
   position: sticky;
@@ -241,10 +312,43 @@ main .container .progress-cont .progress .progress-bar-cont {
   cursor: pointer;
 }
 main .container .progress-cont .progress .progress-bar-cont .canvas {
+  overflow: scroll;
   height: 65vh;
   width: 360px;
   margin-top: 10px;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas::-webkit-scrollbar {
+  display: block;
+  width: 5px;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas::-webkit-scrollbar-track {
+  background: transparent;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas::-webkit-scrollbar-thumb {
+  background-color: #a8896c;
+  border-right: none;
+  border-left: none;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas::-webkit-scrollbar-track-piece:end {
+  background: transparent;
+  margin-bottom: 10px;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas::-webkit-scrollbar-track-piece:start {
+  background: transparent;
+  margin-top: 10px;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .cancel-order {
+  padding: 3px 116px 3px 116px;
+  color: #ffffff;
+  margin-left: 10px;
+  text-decoration: none;
+  cursor: pointer;
+  font-family: "Poppins", sans-serif;
+  background-color: #a8896c;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .cancel-order:hover {
+  opacity: 75%;
 }
 main .container .progress-cont .progress .progress-bar-cont .canvas .tran-cont {
   display: flex;
@@ -311,4 +415,8 @@ main .container .progress-cont .progress .progress-bar-cont .canvas .progress-ti
 }
 main .container .progress-cont .progress .progress-bar-cont .canvas .progress-timeline .percentage .prog-desc {
   width: 195px;
+}
+main .container .progress-cont .progress .progress-bar-cont .canvas .progress-timeline .line {
+  border: 2px dotted #ffffff;
+  margin-top: 10px;
 }/*# sourceMappingURL=userMessage.css.map */
