--- a/src/sys-admin/message-page/adminMessage.scss
+++ b/src/sys-admin/message-page/adminMessage.scss
@@ -195,6 +195,7 @@ main {
                         height: 65vh;
                         width: 360px;
                         margin-top: 10px;
+                        background-color: $white-color;
                         box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
                         
                         .accept-order {
@@ -244,6 +245,7 @@ main {
                                 display: flex;
                                 width: 340px;
                                 height: 50px;
+                                background-color: $divider-color;
                                 box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
                             
                                 img {
@@ -275,9 +277,19 @@ main {
                                 .prog-status {
                                     width: 85px;
 
-                                    p {
+                                    input[type=submit] {
                                         margin-left: 5px;
                                         color: $red;
+                                        font-family: $font-family;
+                                        background-color: $loginbg-color;
+                                        border: none;
+                                        border-radius: 3px;
+                                        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+                                        cursor: pointer;
+
+                                        &:hover {
+                                            opacity: 70%;
+                                        }
                                     }
                                 }
 
